Fixed spacing below projects page title

--- a/grid.css
+++ b/grid.css
@@ -66,6 +66,7 @@
 
     .title-container {
         margin-top: 45px;
+        margin-bottom: 35px;
     }
 
     .grid-container-2-items {
